--- a/WAAD.WebSSO.JAVA/java/code/samples/sample/src/main/resources/federation.properties
+++ b/WAAD.WebSSO.JAVA/java/code/samples/sample/src/main/resources/federation.properties
@@ -1,6 +1,8 @@
-federation.trustedissuers.issuer=https://accounts.accesscontrol.windows.net/v2/wsfederation
-federation.trustedissuers.thumbprint=3F5DFCDF4B3D0EAB9BA49BEFB3CFD760DA9CCCF1
-federation.trustedissuers.friendlyname=Awesome Computers
-federation.audienceuris=spn:9a822147-348b-4e0e-8edf-899fe8c117d4
-federation.realm=spn:9a822147-348b-4e0e-8edf-899fe8c117d4@495c4a5e-38b7-49b9-a90f-4c0050b2d7f7
+#metadata URL for the Azure AD tenant obtained from the application definition
+federation.metadata.url=https://login.windows.net/efaee2d0-5730-46ea-a8a7-e502fe8dbb4b/FederationMetadata/2007-06/FederationMetadata.xml
+# Client ID	 from the Azure AD application single sign-on section of "CONFIGURE" menu
+federation.realm=spn:b9f0f8cf-e160-43ba-832f-4caa93553e82
+# Client ID	 from the Azure AD application single sign-on section of "CONFIGURE" menu
+federation.audienceuris=spn:b9f0f8cf-e160-43ba-832f-4caa93553e82
+# REPLY URL from the Azure AD application single sign-on section of "single sign-on" menu
 federation.reply=https://localhost:8443/sample/wsfed-saml
