"support for multiple identity providers"

--- a/WAAD.WebSSO.JAVA/java/code/samples/sample/src/main/resources/federation.properties
+++ b/WAAD.WebSSO.JAVA/java/code/samples/sample/src/main/resources/federation.properties
@@ -1,8 +1,2 @@
-#metadata URL for the Azure AD tenant obtained from the application definition
-federation.metadata.url=https://login.windows.net/efaee2d0-5730-46ea-a8a7-e502fe8dbb4b/FederationMetadata/2007-06/FederationMetadata.xml
-# Client ID	 from the Azure AD application single sign-on section of "CONFIGURE" menu
-federation.realm=spn:b9f0f8cf-e160-43ba-832f-4caa93553e82
-# Client ID	 from the Azure AD application single sign-on section of "CONFIGURE" menu
-federation.audienceuris=spn:b9f0f8cf-e160-43ba-832f-4caa93553e82
-# REPLY URL from the Azure AD application single sign-on section of "single sign-on" menu
-federation.reply=https://localhost:8443/sample/wsfed-saml
+#this entry points to the issuer node in the trusted.issuers.xml resource
+federation.trusted.issuer.to.use=contoso.onmicrosoft.com
