Fixed ACS STS lookup in the metadata document

--- a/WAAD.WebSSO.JAVA/java/code/samples/sample/src/main/resources/federation.properties
+++ b/WAAD.WebSSO.JAVA/java/code/samples/sample/src/main/resources/federation.properties
@@ -1,2 +1,2 @@
 #this entry points to the issuer node in the trusted.issuers.xml resource
-federation.trusted.issuer.to.use=contoso.onmicrosoft.com
+federation.trusted.issuer.to.use=ContosoACS
